2009-07-06 10:00 Ali aliov@xfce.org
	* 0.8.1.1 release.

2009-07-03: 22:00 Ali aliov@xfce.org
	* po/* update po files.
	
2009-07-03: 20:30 Ali aliov@xfce.org
	* po/POSTFILES.in added [type: gettext/glade] before the interface
	file to fix dropped translatable strings.
	
2009-07-03 19:30 Mike Massonnet mmassonnet@xfce.org
	* data/interfaces/Makefile.am use a sort of filter for interfaces_h 
	* data/interfaces/xfpm-settings.ui drops a forgotten #define.
	
2009-07-03 10:00 Mike Massonnet mmassonnet@xfce.org
	* Patch to avoid installing the ui file.

2009-06-30: 15:00 Ali aliov@xfce.org
	* settings/xfpm-setting.c Don't allow brightness timeout to be less than
	DPMS sleep timeout.
	
2009-06-28: 12:10 Ali aliov@xfce.org
	* Use xfpm-dbus-monitor for dbus monitoring stuff, so hal-monitor is removed.
	* hal-device.c Fix a Glib warnings when DBus is disconnected.
	
2009-06-27: 11:15 Ali aliov@xfce.org 
	* Use "/xfce4-power-manager" as a prefix for properties name to avoid
	incompatibile installation with old versions.
	* src/xfpm-brightness-widget.c: get rid of a GTimer and use the id of 
	the timeout function+Make the color of the popup better.

2009-06-26: 12:00 Ali aliov@xfce.org
	* Change the style of the brightness popup indicator.

2009-06-21: 14:00 Ali aliov@xfce.org
	* Make the generic common pointers static in the *_new functions.
	* src/xfpm-xfconf.c free specs list after usage.
	* settings/xfpm-settings.c Fix default DPMS settings on battery power.

2009-06-20: 19:50 Ali aliov@xfce.org
	* libxfpm/xfpm-common.c Remove no longer used function, that's it
	for Today :).
	
2009-06-20: 19:50 Ali aliov@xfce.org
	* Fix default values shown in the settings dialog.
	* fix issue reading default values from xfconf.

2009-06-20: 19:10 Ali aliov@xfce.org
	* Fix a DPMS storage values.

2009-06-20: 18:30  Ali aliov@xfce.org
	* settings/xfpm-settings.c
	Get a pointer to the notebook before connecting signals.
	* src/xfpm-xfconf.c Store Configurations in GValues instead of 