@@ -4,8 +4,8 @@
   <requires lib="xfce4" version="2360.6128"/>
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkAdjustment" id="adjustment1">
-    <property name="value">30</property>
-    <property name="lower">30</property>
+    <property name="value">14</property>
+    <property name="lower">14</property>
     <property name="upper">360</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
@@ -29,8 +29,8 @@
     <property name="step_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment5">
-    <property name="value">30</property>
-    <property name="lower">30</property>
+    <property name="value">15</property>
+    <property name="lower">14</property>
     <property name="upper">360</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
